# vion-fullstack

./: BACKEND_PERFORMANCE_REPORT.md  BACKEND_VIVA_GUIDE.md  FRONTEND_VIVA_GUIDE.md  NUMBERS_REPORT.md  README.md  improvments.md
book_references/: alice_in_wonderland_parsed_structure.json  alice_in_wonderland_raw_chapters.json  frankenstein_parsed_structure.json  frankenstein_raw_chapters.json
fastapi-tts/: .gitignore  download_and_generate_references.py  main.py  pyproject.toml  scene_demo_tts.py
frontend/: README.md  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: types.ts
frontend/src/app/: App.tsx  layout.tsx  page.tsx
frontend/src/app/components/reader/: AudioPlayer.tsx  AudiobookPlayer.tsx  ContentsSidebar.tsx  DemoBookPlayer.tsx  HighlightToolbar.tsx  LibraryPage.tsx  MusicPlayer.tsx  ReaderContent.tsx  ReaderContext.tsx  SceneDemoPage.tsx  SearchPanel.tsx  ThemePanel.tsx  (+10 more)
frontend/src/app/emotion-demo/: page.tsx
frontend/src/app/reader/: page.tsx
frontend/src/app/scene-demo/: page.tsx
frontend/src/components/: ClientOnly.tsx
frontend/src/components/reader/: AudiobookPlayer.tsx  BookmarksSidebar.tsx  EmotionDemoPage.tsx  HighlightsSidebar.tsx  LanguagePicker.tsx  LibraryPage.tsx  MusicPlayer.tsx  ReaderContent.tsx  ReaderContext.tsx  ReaderPage.tsx  SceneDemoPage.tsx  TopBar.tsx  VoicePicker.tsx  ambientSounds.ts  archiveApi.ts  audioUtils.ts  demoBook.ts  epubParser.ts  pdfParser.ts  sampleBook.ts  themeStyles.ts
frontend/src/providers/: index.tsx
