[project]
name = "fastapi-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "spacy>=3.8.14",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
